<resources>
    <string name="app_name">HolyChat</string>
    <string name="user_account">账号:</string>
    <string name="psw_short">密码:</string>
    <string name="user_psw">我不偷看你密码~</string>
    <string name="user_ensure_psw">再输一遍叭~~~</string>
    <string name="login_btn">登录</string>
    <string name="register_btn">注册账号</string>
    <string name="forget_psw">忘记密码</string>
    <string name="user_name">起一个可爱的名字吧~</string>
    <string name="security_question">设置个密保问题</string>
    <string name="security_answer">密保答案o(*￣▽￣*)ブ</string>
    <string name="register_title">HolyChat Register</string>
    <string name="back">返回</string>
    <string name="find_psw_title">Find Your Password</string>
    <string name="find_psw_account_in">请输入您的账户</string>
    <string name="find_psw_security_an">请输入您的密保答案：</string>
    <string name="ok_btn">确定</string>
    <string name="cancel">取消</string>
    <string name="an_security_qu">请回答密保问题：</string>
    <string name="input_an">回答您的密保问题</string>
    <string name="set_new_psw">设置新密码：</string>
    <string name="chat">聊天</string>
    <string name="friends">好友</string>
    <string name="me">我</string>
    <string name="log_out">退出登录</string>
    <string name="friends_list">好友列表</string>
    <string name="delete_friend">删除好友</string>
    <string name="search_friend">查找好友</string>
    <string name="send">发送</string>
    <string name="search_result">搜索结果</string>
    <string name="no_choose_friend_chat">快去找个人聊天吧~</string>
    <string name="no_choose">未选择</string>
    <string name="ensure_delete">确认删除？(・∀・*)</string>
    <string name="ensure_add">确认添加？U•ェ•*U</string>
    <string name="no_content">你搜的人太奇怪啦~</string>
    <string name="app_title">HolyChat</string>
    <string name="friend_loading_text">正在加载好友列表…</string>
    <string name="chat_loading_text">正在加载聊天记录…</string>
    <string name="no_chat_text_content">你发点东西嘛~~</string>
</resources>