<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/Set_new_psw_sure_et"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/set_new_psw"
            android:textSize="25sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_below="@+id/Set_new_psw_sure_et"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/Set_new_psw_cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_button_short_press"
                android:text="@string/cancel"
                android:layout_toEndOf="@+id/Set_new_psw_sure_btn"
                android:textColor="@android:color/white"
                android:layout_marginStart="10dp"
                android:textSize="16sp" />

            <Button
                android:id="@+id/Set_new_psw_sure_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"

                android:background="@drawable/selector_button_short_press"
                android:text="@string/ok_btn"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </RelativeLayout>

        <EditText
            android:id="@+id/Set_new_psw_sure_et"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Set_new_psw_et"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_edit_text_shape"
            android:hint="@string/user_ensure_psw"
            android:inputType="textPassword"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/Set_new_psw_et"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:hint="@string/user_psw"
            android:inputType="textPassword"
            android:background="@drawable/shape_edit_text_shape"
            android:layout_marginTop="10dp"
            android:textSize="18sp" />
    </RelativeLayout>

</LinearLayout>